replacing custom logobars around docs

--- a/apps/docs/content/components/LogoSuite/index.mdx
+++ b/apps/docs/content/components/LogoSuite/index.mdx
@@ -12,7 +12,7 @@ export default ComponentLayout
 ![A complete logo suite component, featuring a heading, description and two rows of 6 vendor logos in their default muted colors](https://github.com/primer/brand/assets/13340707/b541ba09-2e99-45be-bcb3-a95a1387c9ed)
 
 - **Heading:** an optional main title of the logo suite.
-- **Description:** a short description that extends the information provided by the heading and describes the logos shown.
+- **Description:** optional information that describes the logos shown.
 - **Logobar:** a space for a list of logos, with three appearance options.
 - **Divider:** an optional divider to separate the logo suite from following content.
 
@@ -26,14 +26,20 @@ Logo suite should be used for groups of logos more than 4 and less than 12. In s
 
 <DoDontContainer stacked>
   <Do>
-    <img src="https://via.placeholder.com/900x400/d3d9df/d3d9df.png" />
+    <img
+      src="https://github.com/primer/brand/assets/13340707/a2b98ef8-00d4-4a19-93cd-3c746fd40929"
+      alt=""
+    />
     <Caption>
       Arrange the logos so that the sizes, heights, colors, and areas of the
       separate logos create consistency and balance.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://via.placeholder.com/900x400/d3d9df/d3d9df.png" />
+    <img
+      src="https://github.com/primer/brand/assets/13340707/327b2db7-d337-4788-b0f3-e8c5f80c7af7"
+      alt=""
+    />
     <Caption>
       Don’t place logos without considering the spatial balance of the logo
       suite. Arrange to prevent using more than two rows.
@@ -45,14 +51,20 @@ Logo suite should be used for groups of logos more than 4 and less than 12. In s
 
 <DoDontContainer stacked>
   <Do>
-    <img src="https://via.placeholder.com/900x400/d3d9df/d3d9df.png" />
+    <img
+      src="https://github.com/primer/brand/assets/13340707/4c958008-73bb-4739-81fb-adbbc4541cff"
+      alt=""
+    />
     <Caption>
       Do publish the logo suite with context. Introduce the logos and, when
       applicable, share how the logos have been grouped together.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://via.placeholder.com/900x400/d3d9df/d3d9df.png" />
+    <img
+      src="https://github.com/primer/brand/assets/13340707/7099512c-c0ae-4187-ae4e-7214790d5e18"
+      alt=""
+    />
     <Caption>
       Don’t use the logo suite without a heading/description. Consider turning
       off a visible description if needed.
@@ -64,14 +76,20 @@ Logo suite should be used for groups of logos more than 4 and less than 12. In s
 
 <DoDontContainer stacked>
   <Do>
-    <img src="https://via.placeholder.com/900x400/d3d9df/d3d9df.png" />
+    <img
+      src="https://github.com/primer/brand/assets/13340707/3245bcd5-4304-4d84-872e-6d30b30427d6"
+      alt=""
+    />
     <Caption>
       Ensure that the colors are consistent across the logos to match the logo
       bar option. Ensure spacing between logos are consistent.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://via.placeholder.com/900x400/d3d9df/d3d9df.png" />
+    <img
+      src="https://github.com/primer/brand/assets/13340707/a81f3423-b708-45c8-affc-d3d45a4b7cd8"
+      alt=""
+    />
     <Caption>
       Don’t use logos with inconsistent colors or don’t match the logo bar
       option. Don’t use inconsistent spacing.
@@ -90,6 +108,36 @@ The logo suite offers three appearance options:
 - `marquee`: The marquee option provides a flowing logo animation and can accommodate up to 12 logos. It is ideal for scenarios with limited page real estate.
 
 The muted and emphasis options on the logo bar contains an optional divider. This divider can serve as a visual separator. These three options can be used alongside one another when logo suite components are used adjacently.
+
+<div>
+  <img
+    src="https://github.com/primer/brand/assets/13340707/5ad51788-25a4-401a-91b0-02ec7407aa31"
+    alt=""
+  />
+  <Caption>
+    The muted option is the default logo bar. It is the best option for creating
+    2 rows (when using 6-12 logos).
+  </Caption>
+</div>
+
+<div>
+  <img
+    src="https://github.com/primer/brand/assets/13340707/6f239722-cb7b-4976-8782-09afbb1879b7"
+    alt=""
+  />
+  <Caption>
+    The muted option is the default logo bar. It is the best option for creating
+    2 rows (when using 6-12 logos).
+  </Caption>
+</div>
+
+<div>
+  <img
+    src="https://github.com/primer/brand/assets/13340707/d2dd578c-fce8-4999-ae07-066a616653ac"
+    alt=""
+  />
+  <Caption>The marquee options allows for different speed options.</Caption>
+</div>
 
 ### Alignment
 
