--- a/apps/docs/content/components/LogoSuite/react.mdx
+++ b/apps/docs/content/components/LogoSuite/react.mdx
@@ -147,6 +147,7 @@ import {LogoSuite} from '@primer/react-brand'
       </svg>
     </LogoSuite.Logobar>
   </LogoSuite>
+  <br />
   <LogoSuite>
     <LogoSuite.Heading visuallyHidden>Featured sponsors</LogoSuite.Heading>
     <LogoSuite.Description>Speed: Slow</LogoSuite.Description>
@@ -188,7 +189,7 @@ import {LogoSuite} from '@primer/react-brand'
     Build with us
   </LogoSuite.Heading>
   <LogoSuite.Description>
-    We're trusted by the world’s leading organizations
+    We're trusted by the world's leading organizations
   </LogoSuite.Description>
   <LogoSuite.Logobar variant="emphasis">
     <svg role="img" viewBox="0 0 300 100">
@@ -303,6 +304,7 @@ A heading element must be present as it serves as a navigation hook for assistiv
       </svg>
     </LogoSuite.Logobar>
   </LogoSuite>
+  <br />
   <LogoSuite align="justify">
     <LogoSuite.Heading>Justified</LogoSuite.Heading>
     <LogoSuite.Logobar>
