--- a/apps/docs/content/components/Hero/index.mdx
+++ b/apps/docs/content/components/Hero/index.mdx
@@ -11,13 +11,14 @@ export default ComponentLayout
 
 ![An image displaying a hero with a heading, description, primary and secondary actions.](https://github.com/primer/brand/assets/912236/51f3dd23-9ac7-4825-9169-4fb7f295e7f1)
 
+- Label: an optional label to provide leading context to the hero.
 - Heading: the main title of the hero.
 - Description: a short description of the hero.
 - Actions: the main and secondary actions the user should take on the page.
 
 ## Usage
 
-Use the hero component to provide a title, description and action that introduces the main content of a page. The hero component is designed to be positioned at the top of a page and spans the full width of the viewport. Consider using the [CTA banner](/components/CTABanner) to replicate the content and actions in other parts of the page. 
+Use the hero component to provide a title, description and action that introduces the main content of a page. The hero component is designed to be positioned at the top of a page and spans the full width of the viewport. Consider using the [CTA banner](/components/CTABanner) to replicate the content and actions in other parts of the page.
 
 Both heading and description of the hero should be short and descriptive. Heading should be not be longer than 2 lines, and description should be no longer than 3-4 lines.
 
@@ -60,7 +61,8 @@ Hero elements can be aligned to the start or center of the page. By default, the
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/1f56d40e-c3aa-4955-aa8f-a4748e9fe149" />
     <Caption>
-      Don't use center alignment if the background interfere with the legibility of the content.
+      Don't use center alignment if the background interfere with the legibility
+      of the content.
     </Caption>
   </Dont>
 </DoDontContainer>
