--- a/apps/docs/content/components/SectionIntro/index.mdx
+++ b/apps/docs/content/components/SectionIntro/index.mdx
@@ -11,6 +11,7 @@ export default ComponentLayout
 
 ![An image displaying a section intro with a title, description and a link.](https://github.com/primer/brand/assets/912236/719022fa-4694-42c0-8554-b1923c65739f)
 
+- Label: An optional label to provide leading context to the section intro.
 - Heading: The title of the section.
 - Description: An optional description of the section.
 - Link: An optional link to expand on the content introduced.
