--- a/apps/docs/content/components/SectionIntro/react.mdx
+++ b/apps/docs/content/components/SectionIntro/react.mdx
@@ -27,6 +27,7 @@ import {SectionIntro} from '@primer/react-brand'
 ```jsx live
 <section>
   <SectionIntro>
+    <SectionIntro.Label>Label</SectionIntro.Label>
     <SectionIntro.Heading>
       Focus on solving bigger problems
     </SectionIntro.Heading>
@@ -48,6 +49,7 @@ The content alignment can be changed using the `align` prop on the root `Section
 ```jsx live
 <section>
   <SectionIntro align="center">
+    <SectionIntro.Label>Label</SectionIntro.Label>
     <SectionIntro.Heading>
       Focus on solving bigger problems
     </SectionIntro.Heading>
@@ -71,6 +73,16 @@ The content alignment can be changed using the `align` prop on the root `Section
 | `children`  | `ReactNode`, `ReactNode[]` | `undefined` | `true`   | Content to include within the section intro component         |
 | `align`     | `start`, `center`          | `start`     | `true`   | The layout applied to the content wihin the section component |
 | `className` | `string`                   |             | `false`  | SectionIntro custom class                                     |
+
+### Hero.Label
+
+| name        | type              | default | description                                  |
+| ----------- | ----------------- | ------- | -------------------------------------------- |
+| `className` | `string`          |         | Sets a custom class on the root of the label |
+| `id`        | `string`          |         | Sets a custom id on the root of the label    |
+| `ref`       | `React.RefObject` |         | Forward a Ref to the underlying DOM node     |
+
+Forwards all props from the [Label component](/components/Label), including `size` and `color`.
 
 ### SectionIntro.Heading <Label>Required</Label>
 
