Add label option to hero and section intro components (#363)

--- a/apps/docs/content/components/SectionIntro/index.mdx
+++ b/apps/docs/content/components/SectionIntro/index.mdx
@@ -9,8 +9,9 @@ export default ComponentLayout
 
 ## Anatomy
 
-![An image displaying a section intro with a title, description and a link.](https://github.com/primer/brand/assets/912236/719022fa-4694-42c0-8554-b1923c65739f)
+![An image displaying a section intro with a title, description and a link.](https://github.com/primer/brand/assets/13340707/aeb3216e-a22c-4a98-b268-31d9ab7990cc)
 
+- Label: An optional label to provide leading context to the section intro.
 - Heading: The title of the section.
 - Description: An optional description of the section.
 - Link: An optional link to expand on the content introduced.
