--- a/apps/docs/content/components/LogoSuite/index.mdx
+++ b/apps/docs/content/components/LogoSuite/index.mdx
@@ -107,7 +107,7 @@ The logo suite offers three appearance options:
 - `emphasis`: The emphasis option is designed for spotlighting ~5 logos in the `primary` color. It displays logos larger, drawing more attention to the logos.
 - `marquee`: The marquee option provides a flowing logo animation and can accommodate up to 12 logos. It is ideal for scenarios with limited page real estate.
 
-The muted and emphasis options on the logo bar contains an optional divider. This divider can serve as a visual separator. These three options can be used alongside one another when logo suite components are used adjacently.
+All three options on the logo bar contains an optional divider. This divider can serve as a visual separator. These three options can be used adjacently.
 
 <div>
   <img
@@ -150,3 +150,5 @@ The logo suite comes with start and center align options. Only the heading and d
 ## Related components
 
 - [Image](/components/Image): to display a graphical representation.
+- [Ordered List](/components/OrderedList): to display a list of numbered items.
+- [Unordered List](/components/UnorderedList): to present a collection of items without specific ordering.
