--- a/apps/docs/content/components/LogoSuite/index.mdx
+++ b/apps/docs/content/components/LogoSuite/index.mdx
@@ -9,7 +9,7 @@ export default ComponentLayout
 
 ## Anatomy
 
-![A complete logo suite component, featuring a heading, description and two rows of 6 vendor logos in their default muted colors](https://github.com/primer/brand/assets/13340707/b541ba09-2e99-45be-bcb3-a95a1387c9ed)
+![A complete logo suite component, featuring a heading, description and two rows of 6 vendor logos in their default muted colors](https://github.com/primer/brand/assets/13340707/1a5e494f-7bd3-497c-933c-6c809a78422c)
 
 - **Heading:** an optional main title of the logo suite.
 - **Description:** optional information that describes the logos shown.
@@ -37,12 +37,13 @@ Logo suite should be used for groups of logos more than 4 and less than 12. In s
   </Do>
   <Dont>
     <img
-      src="https://github.com/primer/brand/assets/13340707/327b2db7-d337-4788-b0f3-e8c5f80c7af7"
+      src="https://github.com/primer/brand/assets/131988618/99c9fbad-5540-43b7-93b7-00ac5c22c868)f7"
       alt=""
     />
     <Caption>
       Don’t place logos without considering the spatial balance of the logo
-      suite. Arrange to prevent using more than two rows.
+      suite. Rearrange the logos to prevent using more than two rows or
+      imbalance.
     </Caption>
   </Dont>
 </DoDontContainer>
@@ -52,7 +53,7 @@ Logo suite should be used for groups of logos more than 4 and less than 12. In s
 <DoDontContainer stacked>
   <Do>
     <img
-      src="https://github.com/primer/brand/assets/13340707/4c958008-73bb-4739-81fb-adbbc4541cff"
+      src="https://github.com/primer/brand/assets/131988618/79680b75-9e3b-4eb1-9371-2d8ee45a6dc1"
       alt=""
     />
     <Caption>
@@ -62,7 +63,7 @@ Logo suite should be used for groups of logos more than 4 and less than 12. In s
   </Do>
   <Dont>
     <img
-      src="https://github.com/primer/brand/assets/13340707/7099512c-c0ae-4187-ae4e-7214790d5e18"
+      src="https://github.com/primer/brand/assets/131988618/5ab14ace-9c9e-425f-8b5c-73de82340733"
       alt=""
     />
     <Caption>
@@ -77,7 +78,7 @@ Logo suite should be used for groups of logos more than 4 and less than 12. In s
 <DoDontContainer stacked>
   <Do>
     <img
-      src="https://github.com/primer/brand/assets/13340707/3245bcd5-4304-4d84-872e-6d30b30427d6"
+      src="https://github.com/primer/brand/assets/13340707/b7126430-0d81-4fb6-bd7d-8f35cff923dd"
       alt=""
     />
     <Caption>
@@ -87,7 +88,7 @@ Logo suite should be used for groups of logos more than 4 and less than 12. In s
   </Do>
   <Dont>
     <img
-      src="https://github.com/primer/brand/assets/13340707/a81f3423-b708-45c8-affc-d3d45a4b7cd8"
+      src="https://github.com/primer/brand/assets/13340707/85f477d5-9c3d-4db3-847c-1bcf3539ab67"
       alt=""
     />
     <Caption>
@@ -111,7 +112,7 @@ All three options on the logo bar contains an optional divider. This divider can
 
 <div>
   <img
-    src="https://github.com/primer/brand/assets/13340707/5ad51788-25a4-401a-91b0-02ec7407aa31"
+    src="https://github.com/primer/brand/assets/131988618/d525e6b1-bf67-4684-9300-401ef7686b47"
     alt=""
   />
   <Caption>
@@ -122,18 +123,18 @@ All three options on the logo bar contains an optional divider. This divider can
 
 <div>
   <img
-    src="https://github.com/primer/brand/assets/13340707/6f239722-cb7b-4976-8782-09afbb1879b7"
+    src="https://github.com/primer/brand/assets/131988618/ce3e22f1-9852-4869-830b-5d54b6a1a039"
     alt=""
   />
   <Caption>
-    The muted option is the default logo bar. It is the best option for creating
-    2 rows (when using 6-12 logos).
+    The emphasis option can be used to spotlight logos. It is best used with 6
+    or less logos to create 1 row.
   </Caption>
 </div>
 
 <div>
   <img
-    src="https://github.com/primer/brand/assets/13340707/d2dd578c-fce8-4999-ae07-066a616653ac"
+    src="https://github.com/primer/brand/assets/131988618/409d7a90-d086-438b-80ab-31350f6c42fa"
     alt=""
   />
   <Caption>The marquee options allows for different speed options.</Caption>
