--- a/apps/docs/content/components/Radio/index.mdx
+++ b/apps/docs/content/components/Radio/index.mdx
@@ -20,7 +20,7 @@ Use the radio component to enable users to select a single option from a list.
 
 For scenarios that allow for multiple selections, use the [checkbox](/components/Checkbox) component instead. Keep the radio label descriptive and concise: aim for no more than 3 words. Write labels in sentence case and without ending in punctuation.
 
-### Grouping radio components
+### Grouping
 Use the `name` prop to group together related radio components in a list.
 
 If you're not building something custom, you should use the `Stack` and `FormControl` component to render a group of radio inputs.
