--- a/apps/docs/content/components/Radio/index.mdx
+++ b/apps/docs/content/components/Radio/index.mdx
@@ -21,7 +21,7 @@ Use the radio component to enable users to select a single option from a list.
 For scenarios that allow for multiple selections, use the [Checkbox](/components/Checkbox) component instead. Keep the radio label descriptive and concise: aim for no more than 3 words. Write labels in sentence case and without ending in punctuation.
 
 ### Grouping
-To group related radio components together in a list, use the [Stack](/components/FormControl) and [FormControl](/components/FormControl) components. When rendering a group of radio components, make sure to consider all potential option. Remember to include "None" or "Other" options when necessary. 
+To group related radio components together in a list, use the [Stack](/components/Stack) and [FormControl](/components/FormControl) components. When rendering a group of radio components, make sure to consider all potential option. Remember to include "None" or "Other" options when necessary. 
 
 <DoDontContainer>
   <Do>
@@ -72,3 +72,4 @@ Please use [FormControl](/components/FormControl) to render a standard radio inp
 - [Checkbox](/components/Checkbox): Use the checkbox component to select one or more options of a limited number of choices.
 - [Select](/components/Select): Use the select component to enable selection of one option from a list.
 - [FormControl](/components/FormControl): Use the form control component to display form inputs alongside labels, validation and more.
+- [Stack](/components/Stack): Use the stack component to create a layout for its immediate children along the vertical or horizontal axis.
