--- a/apps/docs/content/components/Checkbox/index.mdx
+++ b/apps/docs/content/components/Checkbox/index.mdx
@@ -18,7 +18,7 @@ export default ComponentLayout
 
 Use checkboxes to allow users to select multiple items from a list of individual items, or to mark one individual item as selected. Unlike the [Radio](/components/Radio) component or [Select](/components/Select) component, Checkbox does not restrict users to choosing just a single option. 
 
-Checkbox labels should be descriptive and concise: aim for no more than 3 words. Write labels in sentence case. Examples: "Repository name", "Payment method".
+Checkbox labels should be descriptive and concise. Write labels in sentence case.
 
 <DoDontContainer>
   <Do>
@@ -82,17 +82,12 @@ Checkbox labels should be descriptive and concise: aim for no more than 3 words.
 
 ### States
 
-Checkboxes have static dimensions and three different states: rest (default), focus, and disabled.
-
-<img
-  width="960"
-  alt="An image showing checkboxes with three different states, rest, focus, and disabled."
-  src="https://user-images.githubusercontent.com/586552/204882576-5b698ce7-c471-4f4e-9f33-c861842f5743.png"
-/>
-
-### Indeterminate
+Checkboxes have static dimensions and four different states: rest (default), checked, indeterminate, and disabled. 
 
 An indeterminate checkbox state should be used if the input value is neither true nor false. This can be useful in situations where you are required to display an incomplete state, or one that is dependent on other input selections to determine a value.
+
+<img alt=""
+/>
 
 ## Accessibility 
 
