Apply suggestions from code review

--- a/apps/docs/content/components/Checkbox/index.mdx
+++ b/apps/docs/content/components/Checkbox/index.mdx
@@ -9,7 +9,8 @@ export default ComponentLayout
 
 ## Anatomy
 
-![An image displaying a checkbox with a checkbox and label.](https://github.com/primer/brand/assets/131988618/17a014ae-8d5f-4c52-890e-ecc49715da2b)
+![An image displaying a checkbox with a checkbox and label.](https://github.com/primer/brand/assets/131988618/2152c720-5ba8-4832-b85b-0d54a8450207)
+
 
 - Checkbox: A selection control.
 - Label: A description for the checkbox. 
@@ -22,13 +23,15 @@ Checkbox labels should be descriptive and concise. Write labels in sentence case
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/131988618/3845d92c-0a76-4229-b961-a1442ec27646" />
+    <img src="https://github.com/primer/brand/assets/131988618/45e4877b-345c-4a3d-904f-8478e5b8f9a4" />
+
     <Caption>
         Checkbox labels should be descriptive and concise. 
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/131988618/afcba2b2-2754-40ec-9337-2734470faf08" />
+    <img src="https://github.com/primer/brand/assets/131988618/b97d2f8b-4f60-44d4-b028-fd0981a7751a" />
+
     <Caption>
         Don't make checkbox labels confusing, indirect, and avoid negative statements. 
     </Caption>
@@ -37,13 +40,15 @@ Checkbox labels should be descriptive and concise. Write labels in sentence case
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/131988618/a09bfb8f-7c7e-466a-8abc-e527cdce7d9b" />
+    <img src="https://github.com/primer/brand/assets/131988618/8e29efd4-124f-4dc9-83c7-d80fd549c8da" />
+
     <Caption>
         Use consistent styling (starting with capitalization and not ending with punctuation).
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/131988618/bf9feff5-bbdb-4414-8152-024652924a74" />
+    <img src="https://github.com/primer/brand/assets/131988618/5d1c9068-cca5-484f-8573-047d4794f345" />
+
     <Caption>
         Don't have inconsistent styling (not starting with capitalization or ending in punctuation).
     </Caption>
@@ -52,13 +57,14 @@ Checkbox labels should be descriptive and concise. Write labels in sentence case
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/131988618/43ae7520-8d25-43bc-b891-1e1abaebf44c" />
+    <img src="https://github.com/primer/brand/assets/131988618/12c7391f-ea66-4aac-bd32-25cf49c75c9d" />
+
     <Caption>
         Use first-person when asking users for acknowledgement or consent.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/131988618/7225b935-b05d-46ef-9374-76a8404e8ebd" />
+    <img src="https://github.com/primer/brand/assets/131988618/7e379318-3d12-4c99-b4ae-c33115791216" />
     <Caption>
         Don't use third-person when asking users for acknowledgement or consent.
     </Caption>
@@ -67,13 +73,15 @@ Checkbox labels should be descriptive and concise. Write labels in sentence case
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/131988618/eecb8764-453d-474f-9e34-21d95c9aadef" />
+    <img src="https://github.com/primer/brand/assets/131988618/d68ff8bc-a8ba-4413-8d06-91a9102ee2d2" />
+
     <Caption>
         Create checkbox options that are non-exclusive and allow for multiple selections. 
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/131988618/9566ff9c-68e8-428e-967f-969edbd47139" />
+    <img src="https://github.com/primer/brand/assets/131988618/150d9724-425c-4ddc-bfc1-d368729abb95" />
+
     <Caption>
         Don't use checkbox options exclusive to one another. They should not be automatically deselected. 
     </Caption>
@@ -86,8 +94,8 @@ Checkboxes have static dimensions and four different states: rest (default), che
 
 An indeterminate checkbox state should be used if the input value is neither true nor false. This can be useful in situations where you are required to display an incomplete state, or one that is dependent on other input selections to determine a value.
 
-<img alt=""
-/>
+<img alt="https://github.com/primer/brand/assets/131988618/89dbc496-2a83-44cf-81cd-9b6a82b4ba50" />
+
 
 ## Accessibility 
 
