Apply suggestions from code review

--- a/apps/docs/content/components/Radio/index.mdx
+++ b/apps/docs/content/components/Radio/index.mdx
@@ -42,13 +42,14 @@ To group related radio components together in a list, use the [Stack](/component
   <Do>
     <img src="https://github.com/primer/brand/assets/131988618/433d5deb-0395-4d24-8f5d-513178d9e944" />
     <Caption>
-        When used in groups, order the radio options in a logical order. E.g. smallest to largest or least restrictive to most restrictive options. 
+        When used in groups, order the radio options in a logical order (e.g. smallest to largest).
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/131988618/1f4c4e50-ef1a-44f1-876c-54ca2036fddf" />
+    <img src="https://github.com/primer/brand/assets/131988618/9d3f4639-c064-4b18-bcce-89a05a29b4e1" />
+
     <Caption>
-        Don't order radio options without logic in a list. 
+        Don't order radio options without logic in a group.
     </Caption>
   </Dont>
 </DoDontContainer>
