--- a/apps/docs/content/components/Checkbox/index.mdx
+++ b/apps/docs/content/components/Checkbox/index.mdx
@@ -31,7 +31,6 @@ Checkbox labels should be descriptive and concise. Write labels in sentence case
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/b97d2f8b-4f60-44d4-b028-fd0981a7751a" />
-
     <Caption>
         Don't make checkbox labels confusing, indirect, and avoid negative statements. 
     </Caption>
@@ -41,14 +40,12 @@ Checkbox labels should be descriptive and concise. Write labels in sentence case
 <DoDontContainer>
   <Do>
     <img src="https://github.com/primer/brand/assets/131988618/8e29efd4-124f-4dc9-83c7-d80fd549c8da" />
-
     <Caption>
         Use consistent styling (starting with capitalization and not ending with punctuation).
     </Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/5d1c9068-cca5-484f-8573-047d4794f345" />
-
     <Caption>
         Don't have inconsistent styling (not starting with capitalization or ending in punctuation).
     </Caption>
@@ -58,7 +55,6 @@ Checkbox labels should be descriptive and concise. Write labels in sentence case
 <DoDontContainer>
   <Do>
     <img src="https://github.com/primer/brand/assets/131988618/12c7391f-ea66-4aac-bd32-25cf49c75c9d" />
-
     <Caption>
         Use first-person when asking users for acknowledgement or consent.
     </Caption>
@@ -74,14 +70,12 @@ Checkbox labels should be descriptive and concise. Write labels in sentence case
 <DoDontContainer>
   <Do>
     <img src="https://github.com/primer/brand/assets/131988618/d68ff8bc-a8ba-4413-8d06-91a9102ee2d2" />
-
     <Caption>
         Create checkbox options that are non-exclusive and allow for multiple selections. 
     </Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/150d9724-425c-4ddc-bfc1-d368729abb95" />
-
     <Caption>
         Don't use checkbox options exclusive to one another. They should not be automatically deselected. 
     </Caption>
@@ -94,7 +88,7 @@ Checkboxes have static dimensions and four different states: rest (default), che
 
 An indeterminate checkbox state should be used if the input value is neither true nor false. This can be useful in situations where you are required to display an incomplete state, or one that is dependent on other input selections to determine a value.
 
-<img alt="https://github.com/primer/brand/assets/131988618/89dbc496-2a83-44cf-81cd-9b6a82b4ba50" />
+<img src="https://github.com/primer/brand/assets/131988618/89dbc496-2a83-44cf-81cd-9b6a82b4ba50" />
 
 
 ## Accessibility 
