--- a/apps/docs/content/components/LogoSuite/index.mdx
+++ b/apps/docs/content/components/LogoSuite/index.mdx
@@ -116,7 +116,7 @@ All three options on the logo bar contains an optional divider. This divider can
     alt=""
   />
   <Caption>
-    The muted option is the default logo bar. It is the best option for creating
+    Use the default muted option when displaying 6-12 logos across two rows. 
     2 rows (when using 6-12 logos).
   </Caption>
 </div>
