change imagePosition to position

--- a/apps/docs/content/components/Hero/index.mdx
+++ b/apps/docs/content/components/Hero/index.mdx
@@ -15,6 +15,7 @@ export default ComponentLayout
 - Heading: the main title of the hero.
 - Description: a short description of the hero.
 - Actions: the main and secondary actions the user should take on the page.
+- Image: an optional foreground image that appears adjacent to the text
 
 ## Usage
 
