--- a/apps/docs/content/components/Hero/react.mdx
+++ b/apps/docs/content/components/Hero/react.mdx
@@ -45,7 +45,7 @@ import {Hero} from '@primer/react-brand'
 
 ### Images
 
-`Hero` can display an optional foreground image. Use `imagePosition` to alternate between various layouts.
+`Hero` can display an optional foreground image. Use `position` to alternate between various layouts.
 
 ```jsx live
 <>
@@ -66,7 +66,7 @@ import {Hero} from '@primer/react-brand'
     </Hero.Heading>
     <Hero.PrimaryAction href="#">Get started with Actions</Hero.PrimaryAction>
     <Hero.Image
-      imagePosition="inline-end"
+      position="inline-end"
       src="https://via.placeholder.com/300x450/d3d9df/d3d9df.png"
       alt="placeholder, blank area with an off-white background color"
     />
@@ -150,8 +150,8 @@ Forwards all props from the [Button component](/components/Button).
 
 ### Hero.Image
 
-| name            | type                                                                   | default       | description                                  |
-| --------------- | ---------------------------------------------------------------------- | ------------- | -------------------------------------------- |
-| `imagePosition` | <PropTableValues values={['inline-end', 'block-end']} addLineBreaks /> | `'block-end'` | Controls positioning of the foreground image |
+| name       | type                                                                   | default       | description                                  |
+| ---------- | ---------------------------------------------------------------------- | ------------- | -------------------------------------------- |
+| `position` | <PropTableValues values={['inline-end', 'block-end']} addLineBreaks /> | `'block-end'` | Controls positioning of the foreground image |
 
 Forwards all props from the [Image component](/components/Image), including `src`, `alt`, and `aspectRatio`.
