--- a/apps/docs/content/components/Hero/react.mdx
+++ b/apps/docs/content/components/Hero/react.mdx
@@ -43,6 +43,37 @@ import {Hero} from '@primer/react-brand'
 </Hero>
 ```
 
+### Images
+
+`Hero` can display an optional foreground image. Use `position` to alternate between various layouts.
+
+```jsx live
+<>
+  <Hero>
+    <Hero.Label>Actions</Hero.Label>
+    <Hero.Heading>Automate your workflow from idea to production</Hero.Heading>
+    <Hero.PrimaryAction href="#">Get started with Actions</Hero.PrimaryAction>
+    <Hero.Image
+      src="https://via.placeholder.com/600x400/d3d9df/d3d9df.png"
+      alt="placeholder, blank area with an off-white background color"
+    />
+  </Hero>
+  <br />
+  <Hero align="center">
+    <Hero.Label>Actions</Hero.Label>
+    <Hero.Heading size="2">
+      Automate your workflow from idea to production
+    </Hero.Heading>
+    <Hero.PrimaryAction href="#">Get started with Actions</Hero.PrimaryAction>
+    <Hero.Image
+      position="inline-end"
+      src="https://via.placeholder.com/300x450/d3d9df/d3d9df.png"
+      alt="placeholder, blank area with an off-white background color"
+    />
+  </Hero>
+</>
+```
+
 ### Alignment
 
 `Hero` text alignment can be adjusted by changing the `align` prop.
@@ -116,3 +147,11 @@ Forwards all props from the [Button component](/components/Button).
 | `as`        | `a`, `button` | `a`     | Applies the underlying HTML element |
 
 Forwards all props from the [Button component](/components/Button).
+
+### Hero.Image
+
+| name       | type                                                                   | default       | description                                  |
+| ---------- | ---------------------------------------------------------------------- | ------------- | -------------------------------------------- |
+| `position` | <PropTableValues values={['inline-end', 'block-end']} addLineBreaks /> | `'block-end'` | Controls positioning of the foreground image |
+
+Forwards all props from the [Image component](/components/Image), including `src`, `alt`, and `aspectRatio`.
