fix broken image link

--- a/apps/docs/content/components/LogoSuite/index.mdx
+++ b/apps/docs/content/components/LogoSuite/index.mdx
@@ -37,7 +37,7 @@ Logo suite should be used for groups of logos more than 4 and less than 12. In s
   </Do>
   <Dont>
     <img
-      src="https://github.com/primer/brand/assets/131988618/99c9fbad-5540-43b7-93b7-00ac5c22c868)f7"
+      src="https://github.com/primer/brand/assets/13340707/d7ac28ec-e341-4d77-8220-fd4197d5613b"
       alt=""
     />
     <Caption>
@@ -116,8 +116,8 @@ All three options on the logo bar contains an optional divider. This divider can
     alt=""
   />
   <Caption>
-    Use the default muted option when displaying 6-12 logos across two rows. 
-    2 rows (when using 6-12 logos).
+    Use the default muted option when displaying 6-12 logos across two rows. 2
+    rows (when using 6-12 logos).
   </Caption>
 </div>
 
