fixing some docs typos on logo suite

--- a/apps/docs/content/components/LogoSuite/react.mdx
+++ b/apps/docs/content/components/LogoSuite/react.mdx
@@ -1,10 +1,10 @@
 ---
-title: LogoSuite
+title: Logo suite
 status: Experimental
 a11yReviewed: false
 source: https://github.com/primer/brand/blob/main/packages/react/src/LogoSuite/LogoSuite.tsx
 storybook: '/brand/storybook/?path=/story/components-logosuite--default'
-description: Use a LogoSuite to present a list logos, such as sponsors or vendors.
+description: Use a logo suite to present a list logos, such as sponsors or vendors.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
