--- a/apps/docs/content/components/LogoSuite/index.mdx
+++ b/apps/docs/content/components/LogoSuite/index.mdx
@@ -18,7 +18,9 @@ export default ComponentLayout
 
 ## Usage
 
-Use the logo suite component to showcase a list of logos, such as for clients, sponsors, or related enterprises. Use the logo suite to build credibility, trust, and provide social proof by displaying consistent logos.
+Use the logo suite component to showcase a list of logos, such as for clients, sponsors, or related enterprises.
+
+A logo suite is intended to build credibility, trust, and provide social proof by displaying consistent logos.
 
 Logo suite should be used for groups of logos more than 4 and less than 12. In scenarios hoping to showcase more than 12 logos, considering stacking two components together. To create the best visual consistency and balance, rearrange and resize the logos when necessary to create similar area distribution and attention to each of the logos.
 
