Updated to Perfomant Controls

--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -39,7 +39,7 @@ import {VideoPlayer} from '@primer/react-brand'
 >
   <VideoPlayer.Source src="https://cdn.api.video/vod/vi36GGvd6PoTqViQLxBWwHjJ/mp4/1080/source.mp4" />
   <VideoPlayer.Track
-    src="./sample.vtt"
+    src="/sample.vtt"
     default
     kind="subtitles"
     srcLang="en"
@@ -58,7 +58,7 @@ import {VideoPlayer} from '@primer/react-brand'
 >
   <VideoPlayer.Source src="https://cdn.api.video/vod/vi36GGvd6PoTqViQLxBWwHjJ/mp4/1080/source.mp4" />
   <VideoPlayer.Track
-    src="./sample.vtt"
+    src="/sample.vtt"
     default
     kind="subtitles"
     srcLang="en"
