--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -20,7 +20,7 @@ import {VideoPlayer} from '@primer/react-brand'
 <VideoPlayer title="HLS On Demand Demo" crossOrigin="anonymous">
   <VideoPlayer.Source src="https://cdn.api.video/vod/vi36GGvd6PoTqViQLxBWwHjJ/mp4/1080/source.mp4" />
   <VideoPlayer.Track
-    src="./sample.vtt"
+    src="/sample.vtt"
     default
     kind="subtitles"
     srcLang="en"
@@ -98,9 +98,7 @@ The component API supports all standard HTML attribute props, while providing so
 | `src`  | `string` |         |  `true`  | Sets the URL of the video content     |
 | `type` | `string` |         | `false`  | Sets media type for the video content |
 
-<h3>
-  VideoPlayer.Track <Label>Required</Label>
-</h3>
+<h3>VideoPlayer.Track</h3>
 
 `VideoPlayer.Track` provides a React alternative to the native HTML `<track />`.
 
