--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -83,7 +83,7 @@ The component API supports all standard HTML attribute props, while providing so
 | `children`  | `React.ReactNode`, `React.ReactNode[]` |         |  `true`  | Takes `<source>` and `<track>` elements to present video information |
 | `poster`    | `string`                               |         | `false`  | Sets an image as the starting frame for the video element            |
 | `branding`  | `boolean`                              |         | `false`  | Displays GitHub branding next to video title                         |
-| `className` | `string`                               |         |  `true`  | Sets a custom class                                                  |
+| `className` | `string`                               |         | `false`  | Sets a custom class                                                  |
 
 <h3>
   VideoPlayer.Source <Label>Required</Label>
