Updated vtt to hosted file

--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -20,7 +20,7 @@ import {VideoPlayer} from '@primer/react-brand'
 <VideoPlayer title="HLS On Demand Demo" crossOrigin="anonymous">
   <VideoPlayer.Source src="https://cdn.api.video/vod/vi36GGvd6PoTqViQLxBWwHjJ/mp4/1080/source.mp4" />
   <VideoPlayer.Track
-    src="/sample.vtt"
+    src="https://raw.githubusercontent.com/github/media-players/214239b96a3e5fdb8517ee851fe49891c5ffafbd/assets/video/sample.vtt?token=GHSAT0AAAAAABZPYVSCU2JY3J5ZQALKAPTYZGPVCFA"
     default
     kind="subtitles"
     srcLang="en"
@@ -39,7 +39,7 @@ import {VideoPlayer} from '@primer/react-brand'
 >
   <VideoPlayer.Source src="https://cdn.api.video/vod/vi36GGvd6PoTqViQLxBWwHjJ/mp4/1080/source.mp4" />
   <VideoPlayer.Track
-    src="/sample.vtt"
+    src="https://raw.githubusercontent.com/github/media-players/214239b96a3e5fdb8517ee851fe49891c5ffafbd/assets/video/sample.vtt?token=GHSAT0AAAAAABZPYVSCU2JY3J5ZQALKAPTYZGPVCFA"
     default
     kind="subtitles"
     srcLang="en"
@@ -58,7 +58,7 @@ import {VideoPlayer} from '@primer/react-brand'
 >
   <VideoPlayer.Source src="https://cdn.api.video/vod/vi36GGvd6PoTqViQLxBWwHjJ/mp4/1080/source.mp4" />
   <VideoPlayer.Track
-    src="/sample.vtt"
+    src="https://raw.githubusercontent.com/github/media-players/214239b96a3e5fdb8517ee851fe49891c5ffafbd/assets/video/sample.vtt?token=GHSAT0AAAAAABZPYVSCU2JY3J5ZQALKAPTYZGPVCFA"
     default
     kind="subtitles"
     srcLang="en"
