Update component descriptions

--- a/apps/docs/content/components/Timeline.mdx
+++ b/apps/docs/content/components/Timeline.mdx
@@ -3,14 +3,14 @@ title: Timeline
 status: Experimental
 source: https://github.com/primer/brand/tree/main/packages/react/src/Timeline/Timeline.tsx
 storybook: '/brand/storybook/?path=/story/components-timeline--default'
-description: Use the timeline component to display a list of related items as a sequence of events.
+description: Use the timeline component to display a list of connected items as vertical timeline.
 a11yReviewed: false
 ---
 
-import ComponentLayout from '../../../src/layouts/component-layout'
+import ComponentLayout from '../../src/layouts/component-layout'
 export default ComponentLayout
 
-import {PropTableValues} from '../../../src/components'
+import {PropTableValues} from '../../src/components'
 
 ```js
 import {Timeline} from '@primer/react-brand'
