--- a/apps/docs/content/components/Timeline.mdx
+++ b/apps/docs/content/components/Timeline.mdx
@@ -3,7 +3,7 @@ title: Timeline
 status: Experimental
 source: https://github.com/primer/brand/tree/main/packages/react/src/Timeline/Timeline.tsx
 storybook: '/brand/storybook/?path=/story/components-timeline--default'
-description: Use the timeline component to display a list of connected items as vertical timeline.
+description: Use the timeline component to display a list of connected items as a vertical timeline.
 a11yReviewed: false
 ---
 
