--- a/apps/docs/content/components/Timeline.mdx
+++ b/apps/docs/content/components/Timeline.mdx
@@ -72,4 +72,4 @@ Use an `<em>` element within the timeline items to apply a duotone style and emp
 | Name        | Type                                   |  Default  | Description                              |
 | :---------- | :------------------------------------- | :-------: | :--------------------------------------- |
 | `className` | `string`                               |           | Sets a custom class on the root element  |
-| `children`  | `React.ReactNode`, `React.ReactNode[]` | `default` | Content to be displayed within the item. |
+| `children`  | `React.ReactNode`, `React.ReactNode[]` |  | Content to be displayed within the item. |
