--- a/apps/docs/content/components/LogoSuite/react.mdx
+++ b/apps/docs/content/components/LogoSuite/react.mdx
@@ -422,7 +422,7 @@ Logobars using the `emphasis` variant will appear with relatively higher contras
 | `align`      | <PropTableValues values={['start', 'center', 'justify']} addLineBreaks /> | `'center'` | The horizontal alignment of the LogoSuite.                  |
 | `hasDivider` | `boolean`                                                                 | `true`     | Whether to render a divider immediately after the LogoSuite |
 
-### LogoSuite.Heading <Label size="small">Required</Label>
+### LogoSuite.Heading <Label>Required</Label>
 
 | Name             | Type      | Default     | Description                                |
 | :--------------- | :-------- | :---------- | :----------------------------------------- |
