--- a/apps/docs/content/components/LogoSuite/react.mdx
+++ b/apps/docs/content/components/LogoSuite/react.mdx
@@ -10,7 +10,7 @@ description: Use a logo suite to present a list logos, such as sponsors or vendo
 import ComponentLayout from '../../../src/layouts/component-layout'
 export default ComponentLayout
 
-import {Label} from '@primer/react-brand'
+import {Label} from '@primer/react'
 import {Box as Container} from '@primer/react'
 import {PropTableValues} from '../../../src/components'
 
