--- a/apps/docs/content/components/LogoSuite/react.mdx
+++ b/apps/docs/content/components/LogoSuite/react.mdx
@@ -10,7 +10,7 @@ description: Use a logo suite to present a list logos, such as sponsors or vendo
 import ComponentLayout from '../../../src/layouts/component-layout'
 export default ComponentLayout
 
-import {Label} from '@primer/react-brand'
+import {Label} from '@primer/react'
 import {Box as Container} from '@primer/react'
 import {PropTableValues} from '../../../src/components'
 
@@ -422,7 +422,7 @@ Logobars using the `emphasis` variant will appear with relatively higher contras
 | `align`      | <PropTableValues values={['start', 'center', 'justify']} addLineBreaks /> | `'center'` | The horizontal alignment of the LogoSuite.                  |
 | `hasDivider` | `boolean`                                                                 | `true`     | Whether to render a divider immediately after the LogoSuite |
 
-### LogoSuite.Heading <Label size="small">Required</Label>
+### LogoSuite.Heading <Label>Required</Label>
 
 | Name             | Type      | Default     | Description                                |
 | :--------------- | :-------- | :---------- | :----------------------------------------- |
