--- a/apps/docs/content/components/Button/react.mdx
+++ b/apps/docs/content/components/Button/react.mdx
@@ -58,7 +58,7 @@ The `subtle` variant of Button indicates that the action is a low priority one.
 
 ```jsx live
 <Stack direction="vertical" alignItems="flex-start">
-  <Button block="true">Block Button</Button>
+  <Button block>
 </Stack>
 ```
 
