--- a/apps/docs/content/components/Button/react.mdx
+++ b/apps/docs/content/components/Button/react.mdx
@@ -57,9 +57,7 @@ The `subtle` variant of Button indicates that the action is a low priority one.
 ### Block
 
 ```jsx live
-<Stack direction="vertical" alignItems="flex-start">
-  <Button block>
-</Stack>
+<Button block>Full-width button</Button>
 ```
 
 ### Removing the arrow
