--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -17,7 +17,7 @@ import {VideoPlayer} from '@primer/react-brand'
 ### Default
 
 ```jsx live
-<VideoPlayer title="HLS On Demand Demo" crossOrigin="anonymous">
+<VideoPlayer title="HLS On Demand Demo">
   <VideoPlayer.Source src="https://github.githubassets.com/images/modules/growth/actions/ci-cd-actions.h264.mp4" />
   <VideoPlayer.Track
     src="https://raw.githubusercontent.com/JoshBowdenConcepts/Subtitles-Example/main/sample.vtt"
@@ -35,7 +35,6 @@ import {VideoPlayer} from '@primer/react-brand'
 <VideoPlayer
   poster="https://github.githubassets.com/images/icons/media-player/poster.jpg"
   title="HLS On Demand Demo"
-  crossOrigin="anonymous"
 >
   <VideoPlayer.Source src="https://github.githubassets.com/images/modules/growth/actions/ci-cd-actions.h264.mp4" />
   <VideoPlayer.Track
@@ -51,11 +50,7 @@ import {VideoPlayer} from '@primer/react-brand'
 ## Without branding
 
 ```jsx live
-<VideoPlayer
-  branding={false}
-  title="HLS On Demand Demo"
-  crossOrigin="anonymous"
->
+<VideoPlayer branding={false} title="HLS On Demand Demo">
   <VideoPlayer.Source src="https://github.githubassets.com/images/modules/growth/actions/ci-cd-actions.h264.mp4" />
   <VideoPlayer.Track
     src="https://raw.githubusercontent.com/JoshBowdenConcepts/Subtitles-Example/main/sample.vtt"
@@ -79,7 +74,7 @@ The component API supports all standard HTML attribute props, while providing so
 
 | Name        | Type                                   | Default | Required | Description                                                          |
 | :---------- | :------------------------------------- | :-----: | :------: | :------------------------------------------------------------------- |
-| `title`     | `boolean`                              |         |  `true`  | Sets the title of the video                                          |
+| `title`     | `string`                               |         |  `true`  | Sets the title of the video                                          |
 | `children`  | `React.ReactNode`, `React.ReactNode[]` |         |  `true`  | Takes `<source>` and `<track>` elements to present video information |
 | `poster`    | `string`                               |         | `false`  | Sets an image as the starting frame for the video element            |
 | `branding`  | `boolean`                              |         | `false`  | Displays GitHub branding next to video title                         |
